--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要访问相册来选择图片</string>
+	<key>NSCameraUsageDescription</key>
+	<string>需要访问相机来拍摄图片</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>需要访问麦克风来录制语音</string>
 </dict>
 </plist>
