--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+  get: ^4.6.6
+  image_picker: ^1.0.7
+  record: ^5.0.4
+  path_provider: ^2.1.2
+  lottie: ^3.0.0
+  audioplayers: ^5.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get: ^4.6.6
   get_storage: 
   animated_notch_bottom_bar: ^1.0.0
   dio: ^5.7.0
   shared_preferences: ^2.3.4
   flutter_staggered_animations: ^1.1.1
+  flutter_card_swiper: ^7.0.2
+  appinio_swiper: ^2.1.0
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/avatar.jpg
+    - assets/animations/unlock.json
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
