--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get: ^4.6.6
-  image_picker: ^1.0.7
+  get: ^4.6.5
+  image_picker: ^1.0.4
   record: ^5.0.4
   path_provider: ^2.1.2
   lottie: ^3.0.0
@@ -50,6 +50,7 @@ dependencies:
   appinio_swiper: ^2.1.0
   flutter_staggered_grid_view: ^0.7.0
   flutter_launcher_icons: ^0.14.2
+  qiniu_flutter_sdk: 0.7.0
 
 dev_dependencies:
   flutter_test:
