存档: 完成了海域模块的建设, 同时支持了发布漂瓶子选择不同的海域进行投放

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
   assets:
     - assets/images/avatar.jpg
     - assets/animations/unlock.json
+    - assets/animations/lottie_bottle_open.json
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
