--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: fangkong_xinsheng
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -41,7 +41,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get_storage: 
+  get_storage:
   animated_notch_bottom_bar: ^1.0.0
   dio: ^5.7.0
   shared_preferences: ^2.3.4
@@ -51,6 +51,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   flutter_launcher_icons: ^0.14.2
   qiniu_flutter_sdk: 0.7.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +69,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -79,7 +79,7 @@ flutter:
     - assets/images/avatar.jpg
     - assets/animations/unlock.json
     - assets/animations/lottie_bottle_open.json
-
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
