--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   webview_flutter: ^4.7.0
   webview_flutter_android: ^3.15.0
   webview_flutter_wkwebview: ^3.12.0
+  screenshot: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,6 +56,15 @@ dependencies:
   flutter_launcher_icons: ^0.14.2
   qiniu_flutter_sdk: 0.7.0
   flutter_dotenv: ^5.2.1
+  image_gallery_saver: ^2.0.3
+  
+
+
+dependency_overrides:
+  image_gallery_saver: # support AGP 8, add namespace
+    git:
+      url: https://github.com/knottx/image_gallery_saver.git
+      ref: knottx-latest
 
 dev_dependencies:
   flutter_test:
