封装缓存用户头像组件,使用该组件进行站内头像部分的重构 + 代码格式重构

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   qiniu_flutter_sdk: 0.7.0
   flutter_dotenv: ^5.2.1
   image_gallery_saver: ^2.0.3
+  cached_network_image: ^3.4.1
   
 
 
