--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   webview_flutter_android: ^3.15.0
   webview_flutter_wkwebview: ^3.12.0
   screenshot: ^3.0.0
+  event_bus: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
